--- a/src/include/secrets.yaml
+++ b/src/include/secrets.yaml
@@ -1,34 +1,34 @@
 #QNAP
 qnap_ip: xxx.xxx.x.xxx
-qnap_user: xxx
-qnap_pass: xxx
+qnap_user: xxxxx
+qnap_pass: xxxxx
 
 # Tuya
-tuya_user: xxx
-tuya_pass: xxx
+tuya_user: xxxxx
+tuya_pass: xxxxx
 
 # Plex
-plex_token: xxx
+plex_token: xxxxx
 plex_host: xxx.xxx.x.xxx
 plex_port: xxxxx
 
 # Tautilli
-tautulli_api_key: xxx
+tautulli_api_key: xxxxx
 tautulli_host: xxx.xxx.x.xxx
-tautulli_port: xxxx
+tautulli_port: xxxxx
 
 # Xiaomi Roborock s6
 xiaomi_vacuum_host: xxx.xxx.x.xxx
-xiaomi_vacuum_token: xxx
-xiaomi_cloud_username: xxx
-xiaomi_cloud_password: xxx
+xiaomi_vacuum_token: xxxxx
+xiaomi_cloud_username: xxxxx
+xiaomi_cloud_password: xxxxx
 
 # InfluxDB
-influxdb_host: xxx
-influxdb_port: xxxx
-influxdb_user: xxx
-influxdb_pswd: xxx
+influxdb_host: xxxxx
+influxdb_port: xxxxx
+influxdb_user: xxxxx
+influxdb_pswd: xxxxx
 
 # Harmony Hub
 harmony_host: xxx.xxx.x.xxx
-harmony_activity: xxx
+harmony_activity: xxxxx
