--- a/src/wmbusmeters/etc/wmbusmeters.conf
+++ b/src/wmbusmeters/etc/wmbusmeters.conf
@@ -1,8 +1,8 @@
-loglevel=normal
+loglevel=debug
 device=/dev/ttyUSB0:im871a:t1
 meterfiles=/config/wmbusmeters/logs/meter_readings/
 meterfilesaction=overwrite
-logtelegrams=true
+logtelegrams=false
 format=json
 logfile=/config/wmbusmeters/wmbusmeters.log
-shell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_ID "$METER_JSON"
+shell=/wmbusmeters/mosquitto_pub.sh wmbusmeters/$METER_NAME "$METER_JSON"
