--- a/src/include/themes.yaml
+++ b/src/include/themes.yaml
@@ -1,12 +1,14 @@
 # Dark Mode Theme
+
 dark-mode:
   # Background image
-  primary-color: "#FF9F09"  # from Apple systemOrange dark mode
-  light-primary-color: "#B6B6C1"  # light gray (icons on left menu)
-  primary-background-color: "#2c2c2e"  # systemGray5 dark mode
+  primary-color: "#FF9F09"
+  light-primary-color: "#B6B6C1"
+  primary-background-color: "#2c2c2e"
   secondary-background-color: rgba(25, 25, 25, 0.7)
-  divider-color: "#98989d"  # from Apple systemGray dark mode
+  divider-color: "#98989d"
   accent-color: rgba(255, 159, 9, 1)
+  
   # Text
   primary-font-family: "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"
   paper-font-common-base_-_font-family: "var(--primary-font-family)"
@@ -21,6 +23,7 @@ dark-mode:
   text-primary-color: "#FFF"
   disabled-text-color: "#555"
   text-dark-color: "#FFF"
+  
   # Sidebar Menu
   sidebar-background-color: var(--primary-background-color)
   sidebar-icon-color: var(--light-primary-color)
@@ -28,51 +31,59 @@ dark-mode:
   sidebar-selected-background-color: var(--primary-background-color)
   sidebar-selected-icon-color: "#FFF"
   sidebar-selected-text-color: var(--sidebar-selected-icon-color)
+  
   # States and Badges
   state-icon-color: "#FFF"
   state-icon-active-color: rgba(255, 214, 10, 1)
   paper-item-icon-active-color: rgba(255, 214, 10, 1)
   state-icon-unavailable-color: var(--disabled-text-color)
+  
   # Sliders
   paper-slider-knob-color: "#FFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
-  paper-slider-active-color: "#0984ff"  # from Apple systemBlue dark mode
+  paper-slider-active-color: "#0984ff"
   paper-slider-secondary-color: var(--paper-slider-knob-color)
   paper-slider-container-color: rgba(255, 255, 255, 0.5)
   paper-slider-font-color: "#000"
   ha-slider-background: none !important
+  
   # Labels
   label-badge-background-color: "#23232E"
   label-badge-text-color: "#F1F1F1"
-  label-badge-red: rgba(255, 159, 9, 0.7)  # from Apple systemOrange dark mode
+  label-badge-red: rgba(255, 159, 9, 0.7)
+  
   # Cards
-  card-background-color: var(--secondary-background-color)  # Unused entities table background
+  card-background-color: var(--secondary-background-color)
   paper-listbox-background-color: var(--primary-background-color)
   ha-card-border-radius: 20px
   ha-card-background: rgba(10, 10, 10, 0.4)
   paper-card-background-color: var(--ha-card-background)
   code-editor-background-color: var(--disabled-text-color)
+  
   # Toggles
   paper-toggle-button-checked-button-color: "#484848"
   paper-toggle-button-checked-bar-color: "#484848"
   paper-toggle-button-unchecked-button-color: var(--paper-toggle-button-checked-button-color)
   paper-toggle-button-unchecked-bar-color: var(--disabled-text-color)
+  
   # Table row
   table-row-background-color: var(--primary-background-color)
   table-row-alternative-background-color: var(--secondary-background-color)
+  
   # Switches
   switch-checked-color: "#30d257"
-  switch-checked-track-color: "#30d158"  # from Apple systemGreen dark mode
+  switch-checked-track-color: "#30d158"
   switch-checked-button-color: "#FFF"
+  
   # Other
-  paper-dialog-background-color: rgba(55, 55, 55, 0.8)  # e.g., background of more-info
-  paper-item-icon-color: white  # also should mini-media-player icon white (but doesn't work by itself)
+  paper-dialog-background-color: rgba(55, 55, 55, 0.8)
+  paper-item-icon-color: white  
   more-info-header-background: rgba(25, 25, 25, 0.5)
   lumo-body-text-color: var(--primary-text-color)
   app-header-background-color: rgba(0, 0, 0, 0)
-
   markdown-code-background-color: "#464646"
+  
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
