--- a/src/include/vacuums.yaml
+++ b/src/include/vacuums.yaml
@@ -2,4 +2,4 @@
 - platform: xiaomi_miio
   host: !secret xiaomi_vacuum_host
   token: !secret xiaomi_vacuum_token
-  name: Vacuum
+  name: roborock.vacuum.s6
